--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
 
       <section class="location">
-        <div class="city">Nagpur, IN</div>
+        <div class="City">Nagpur, IN</div>
         <div class="date">Thrusday 01 January 2020</div>
       </section>
       <div class="current">
